Remove discard operators added by code cleanup.

--- a/BlazorWebApp/BlazorWebApp.WebUI.Server/Components/Account/Pages/Manage/PersonalData.razor
+++ b/BlazorWebApp/BlazorWebApp.WebUI.Server/Components/Account/Pages/Manage/PersonalData.razor
@@ -36,6 +36,6 @@
 
     protected override async Task OnInitializedAsync()
     {
-        _ = await UserAccessor.GetRequiredUserAsync(HttpContext);
+        await UserAccessor.GetRequiredUserAsync(HttpContext);
     }
 }
