--- a/BlazorWebApp/BlazorWebApp.WebUI.Client/Layout/NavMenu.razor
+++ b/BlazorWebApp/BlazorWebApp.WebUI.Client/Layout/NavMenu.razor
@@ -4,6 +4,7 @@
 
 <MudNavMenu>
     <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
+    <MudNavLink Href="articles" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Article">Articles</MudNavLink>
     <MudNavLink Href="counter" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">Counter</MudNavLink>
     
     <MudNavLink Href="weather" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Weather</MudNavLink>
